0029765: BOPTools_AlgoTools::MakeSplitEdge Creates Illegal Edge

Method MakeSplitEdge checks arguments order.
This makes the method more generic.
Taking vertex orientation into account.